--- a/frontend/src/app/pages/interfaces-ui/interfaces-ui.component.html
+++ b/frontend/src/app/pages/interfaces-ui/interfaces-ui.component.html
@@ -1,7 +1,8 @@
 <div class="container">
     <div class="container_form">
         <div class="text_up-form">
-            <h2>AVD 👋</h2>
+            <img src="../../../assets/img/logo.png" alt="">
+            <h2>AVD</h2>
         </div>
         <form [formGroup]="interfacesForm" (ngSubmit)="onSubmit()" class="form_avd">
             <div class="form__group field">
