--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -4,6 +4,7 @@
 body{
     margin: 0;
     padding: 0;
+    background: radial-gradient(circle, rgba(0,138,255,1) 0%, rgba(0,138,255,1) 0%, rgba(0,0,0,1) 51%);
 }
 h1,
 h2,
@@ -12,4 +13,10 @@ p,
 a{
     margin: 0;
     padding: 0;
+}
+
+@media screen and (max-width: 700px) {
+    body{
+        background: radial-gradient(circle, rgba(0,138,255,1) 0%, rgba(0,138,255,1) 0%, rgba(0,0,0,1) 80%);
+    }
 }
