--- a/frontend/src/app/pages/interfaces-ui/interfaces-ui.component.html
+++ b/frontend/src/app/pages/interfaces-ui/interfaces-ui.component.html
@@ -6,9 +6,9 @@
         </div>
         <form [formGroup]="interfacesForm" (ngSubmit)="onSubmit()" class="form_avd">
             <div class="form__group field">
-                <input type="input" class="form__field" placeholder="Name" name="consulta" formControlName="consulta"
+                <input type="input" class="form__field" placeholder="..." name="consulta" formControlName="consulta"
                     required />
-                <label for="query" class="form__label">Consultar ❔</label>
+                <label for="query" class="form__label">Consulta ❔</label>
             </div>
 
             <div class="form__group field" >
