--- a/frontend/src/app/pages/interfaces-ui/interfaces-ui.component.scss
+++ b/frontend/src/app/pages/interfaces-ui/interfaces-ui.component.scss
@@ -20,6 +20,7 @@
             text-align: center;
             flex-direction: row;
             margin: auto;
+            
             h2{
                 padding-top: 2em;
                 font-family: 'Roboto', sans-serif;
@@ -54,6 +55,7 @@
                 width: 100%;
                 border: 0;
                 margin-top: 1em;
+                margin-bottom: 0em;
                 border-bottom: 2px solid $gray;
                 outline: 0;
                 font-size: 1rem;
@@ -63,14 +65,14 @@
                 transition: border-color 0.2s;
 
                 &::placeholder {
-                    color: transparent;
+                    color: $gray;
                     
                 }
 
                 &:placeholder-shown ~ .form__label {
-                    font-size: 1.3rem;
+                    font-size: 1.5rem;
                     cursor: text;
-                    top: 20px;
+                    top: 2px;
                 }
             }
 
